# binette

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  confession.md  goal.md  package.json  pnpm-lock.yaml  roadmap.md
.config/: dodeca.styx
.config/tracey/: config.styx
.github/workflows/: ci.yml
docs/content/: _index.md
docs/content/spec/: _index.md  bundles.md  compatibility.md  local-access.md  local-execution.md  schemas.md
rust/binette/: Cargo.toml  README.md
rust/binette/benches/: codec.rs
rust/binette/src/: capi.rs  compact.rs  compatibility.rs  decode.rs  dump.rs  encode.rs  error.rs  facet.rs  hash.rs  layout.rs  lib.rs  local_access.rs  plan.rs  registry.rs  schema.rs  schema_format.rs  stencil.rs  value.rs
rust/binette/src/local_access/: c_abi.rs  import.rs
rust/binette/src/stencil/: aarch64.rs  compile.rs  memory.rs  mod.rs  runtime.rs  tests.rs  types.rs
rust/binette/tests/: compact.rs  decode.rs  dumps.rs  local_access_audit.rs  local_access_c_abi.rs  plans.rs  schema_format.rs  schemas.rs  self_describing.rs
rust/binette/tests/fixtures/: swift-probe-descriptors.json
swift/probes/: Package.swift
swift/probes/Sources/BinetteSwiftProbeDump/: main.swift
swift/probes/Sources/BinetteSwiftProbes/: BinetteCAbiDescriptors.swift  BinetteSwiftProbes.swift
swift/probes/Sources/CBinette/: empty.c
swift/probes/Sources/CBinette/include/: binette.h
swift/probes/Tests/BinetteSwiftProbesTests/: BinetteCAbiCanaryTests.swift  BinetteSwiftProbesTests.swift
tools/: bench_report.py  generate-c-header.sh
typescript/binette/: package.json
typescript/binette/src/: compact.ts  compatibility.ts  dump.ts  helpers.ts  index.ts  plan.ts  primitives.ts  registry.ts  schema.ts  value.ts
typescript/binette/test/: compact.test.ts  dump.test.ts  plan.test.ts  primitives.test.ts  registry.test.ts  schema.test.ts  value.test.ts
