[workspace]
resolver = "2"
members = [
  "rust/binette",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "MIT OR Apache-2.0"
description = "Compact binary value format with schemas and compatibility tooling"
repository = "https://github.com/bearcove/binette"
homepage = "https://github.com/bearcove/binette"
documentation = "https://docs.rs/binette"
keywords = ["binary", "schema", "encoding", "compatibility"]
categories = ["encoding", "data-structures"]

[workspace.dependencies]
blake3 = "1.8.5"
facet = "0.46.4"
facet-core = "0.46.4"
facet-reflect = "0.46.4"
facet-value = "0.46.0"
thiserror = "2.0.18"
