[package]
name = "binette"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
blake3.workspace = true
facet-core.workspace = true
facet-reflect.workspace = true
facet-value.workspace = true
libc.workspace = true
thiserror.workspace = true

[dev-dependencies]
divan.workspace = true
facet.workspace = true

[[bench]]
name = "codec"
harness = false
